blog management done

--- a/greenly/src/app/components/home-admin/home-admin.component.html
+++ b/greenly/src/app/components/home-admin/home-admin.component.html
@@ -59,6 +59,28 @@
         </div>
       </div>
 
+      <!-- Manage Blog -->
+      <div class="col-md-6 col-sm-6 col-10">
+        <div class="req-card rounded-4 p-4 text-center shadow-sm h-100" routerLink="/admin/manage-blog">
+          <div class="mb-4 icon-box bg-success-subtle d-inline-flex align-items-center justify-content-center rounded-circle mx-auto">
+            <span class="icon"><img src="./assets/chat-comment-conversation-svgrepo-com.svg" width="50px" height="50px" /></span>
+          </div>
+          <h3 class="special-font fs-4 mt-3">Manage Blog</h3>
+          <p class="text-muted mt-2">View or delete Posts</p>
+        </div>
+      </div>
+
+      <!-- Manage Blog -->
+      <div class="col-md-6 col-sm-6 col-10">
+        <div class="req-card rounded-4 p-4 text-center shadow-sm h-100" routerLink="">
+          <div class="mb-4 icon-box bg-success-subtle d-inline-flex align-items-center justify-content-center rounded-circle mx-auto">
+            <span class="icon"><img src="./assets/order-food-svgrepo-com.svg" width="50px" height="50px" /></span>
+          </div>
+          <h3 class="special-font fs-4 mt-3">Manage Orders</h3>
+          <p class="text-muted mt-2">We will figure it out</p>
+        </div>
+      </div>
+
     </div>
   </div>
 </section>
