--- a/greenly/src/app/components/navbar/navbar.component.html
+++ b/greenly/src/app/components/navbar/navbar.component.html
@@ -25,7 +25,7 @@
             routerLinkActive="active-link">Services</a>
         </li>
         <li class="nav-item px-2">
-          <a class="nav-link cursor-pointer fw-bold">General Information</a>
+          <a class="nav-link cursor-pointer fw-bold" routerLink="/app/system/general-info">General Information</a>
         </li>
         <li class="nav-item px-2">
           <a class="nav-link cursor-pointer fw-bold" routerLink="/app/system/favorites"
