--- a/greenly/src/app/components/home-admin/home-admin.component.html
+++ b/greenly/src/app/components/home-admin/home-admin.component.html
@@ -30,7 +30,7 @@
       <div class="col-md-4 col-sm-6 col-10">
         <div class="req-card rounded-4 p-4 text-center shadow-sm h-100" routerLink="/admin/edit-product">
           <div class="mb-4 icon-box bg-success-subtle d-inline-flex align-items-center justify-content-center rounded-circle mx-auto">
-            <i class="fa-solid fa-pen-to-square text-success fs-2"></i>
+            <span><img src="./assets/stores-store-svgrepo-com.svg" alt="manage-products" width="50px" height="50px"></span>
           </div>
           <h3 class="special-font fs-4 mt-3">Manage Products</h3>
           <p class="text-muted mt-2">Add, edit or delete products from your store inventory.</p>
